--- a/mine.html
+++ b/mine.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Portfolio</title>
+		<title>TESTEEEE</title>
 		<link rel="shortcut icon" href="logo_mine.png">
 		<link rel="apple-touch-icon" sizes="150x150" href="apple-touch-icon.png" />
 	</head>
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="css/mine.css">
 
 	<body>
-		
+
 
 		<div style="background-color:#f2f5f3;margin:1vw;float:left;">
   				<div id='Pname' onclick="toggle('Ptable');toggle('Pvariat_percent');toggle('Pvariat_money');">Pedro
@@ -22,10 +22,10 @@
 				<table>
 					<thead>
 					  <tr style="font-size:28px;">
-					    <th>NAME</th> 
-					    <th>AMOUNT</th> 
-					    <th>VALOR</th> 
-					    <th>REAL</th> 
+					    <th>NAME</th>
+					    <th>AMOUNT</th>
+					    <th>VALOR</th>
+					    <th>REAL</th>
 					  </tr>
 					</thead>
 					<tbody>
@@ -120,9 +120,9 @@
 					    <td id="total-pedro-amount">
 					    	<strong><center>-</center></strong>
 					    </td>
-					    <td id="total-pedro-bitcoin">	
+					    <td id="total-pedro-bitcoin">
 					    </td>
-					    <td id="total-pedro-real"> 	
+					    <td id="total-pedro-real">
 					    </td>
 					  </tr>
 					</tbody>
@@ -139,10 +139,10 @@
 					<table>
 						<thead>
 						  <tr style="font-size:28px;">
-						    <th>NAME</th> 
-						    <th>AMOUNT</th> 
-						    <th>VALOR</th> 
-						    <th>REAL</th> 
+						    <th>NAME</th>
+						    <th>AMOUNT</th>
+						    <th>VALOR</th>
+						    <th>REAL</th>
 						  </tr>
 						</thead>
 						<tbody>
@@ -272,7 +272,7 @@
 						    	DigixDAO (DGD)
 						    </td>
 						    <td id="digixdao-amount-carlos">
-						    	15.553963 
+						    	15.553963
 						    </td>
 						    <td id="digixdao-total-carlos" class="Cbtcvalue">
 						    </td>
@@ -321,7 +321,7 @@
 						    	IOTA (IOT)
 						    </td>
 						    <td id="iota-amount-carlos">
-						    	4804.68200000	
+						    	4804.68200000
 						    </td>
 						    <td id="iota-total-carlos" class="Cbtcvalue">
 						    </td>
@@ -372,7 +372,7 @@
 						    	<strong><center>-</center></strong>
 						    </td>
 						    <td id="total-carlos-bitcoin">
-						    	
+
 						    </td>
 						    <td id="total-carlos-real">
 						    	<strong></strong>
@@ -392,10 +392,10 @@
 				<table>
 					<thead>
 					  <tr style="font-size:28px;">
-					    <th>NAME</th> 
-					    <th>AMOUNT</th> 
-					    <th>VALOR</th> 
-					    <th>REAL</th> 
+					    <th>NAME</th>
+					    <th>AMOUNT</th>
+					    <th>VALOR</th>
+					    <th>REAL</th>
 					  </tr>
 					</thead>
 					<tbody>
@@ -442,9 +442,9 @@
 					    <td id="total-mariana-amount">
 					    	<strong><center>-</center></strong>
 					    </td>
-					    <td id="total-mariana-bitcoin">	
+					    <td id="total-mariana-bitcoin">
 					    </td>
-					    <td id="total-mariana-real"> 	
+					    <td id="total-mariana-real">
 					    </td>
 					  </tr>
 					</tbody>
@@ -461,8 +461,8 @@
 				<table style="width: 100%;">
 					<thead>
 					  <tr style="font-size:28px;">
-					    <th>BITCOIN</th> 
-					    <th>REAL</th> 
+					    <th>BITCOIN</th>
+					    <th>REAL</th>
 					  </tr>
 					</thead>
 					<tbody>
@@ -481,10 +481,10 @@
 					<table>
 					<thead>
 					  <tr style="font-size:28px;">
-					    <th>NAME</th> 
-					    <th>PRICE</th> 
+					    <th>NAME</th>
+					    <th>PRICE</th>
 					    <th>CHANGE(BTC)</th>
-					    <th>CHANGE(REAL)</th> 
+					    <th>CHANGE(REAL)</th>
 					  </tr>
 					</thead>
 					<tbody>
@@ -692,7 +692,7 @@
 				</table>
 			</div>
 		</div>
-		
+
 	</body>
 
 </html>
