--- a/mine.html
+++ b/mine.html
@@ -11,7 +11,9 @@
 		<link rel="stylesheet" href="css/mine.css">
 
 	<body>
-
+fdsgdsgl;sfgj ivdmhgdvlhdulghdjb
+fdnsnafld livjg ldvg
+dv gndlkfjbgl
 
 		<div style="background-color:#f2f5f3;margin:1vw;float:left;">
   				<div id='Pname' onclick="toggle('Ptable');toggle('Pvariat_percent');toggle('Pvariat_money');">Pedro
