--- a/mine.html
+++ b/mine.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>TESTEEEE</title>
+		<title>Portfolio</title>
 		<link rel="shortcut icon" href="logo_mine.png">
 		<link rel="apple-touch-icon" sizes="150x150" href="apple-touch-icon.png" />
 	</head>
@@ -11,9 +11,7 @@
 		<link rel="stylesheet" href="css/mine.css">
 
 	<body>
-fdsgdsgl;sfgj ivdmhgdvlhdulghdjb
-fdnsnafld livjg ldvg
-dv gndlkfjbgl
+
 
 		<div style="background-color:#f2f5f3;margin:1vw;float:left;">
   				<div id='Pname' onclick="toggle('Ptable');toggle('Pvariat_percent');toggle('Pvariat_money');">Pedro
