--- a/mine.html
+++ b/mine.html
@@ -257,14 +257,14 @@
 						  </tr>
 						  <tr>
 						    <td>
-						    	Storjcoin X (SJCX)
+						    	Storj (STORJ)
 						    </td>
-						    <td id="storjcoin-x-amount-carlos">
+						    <td id="storj-amount-carlos">
 						    	1000.73323201
 						    </td>
-						    <td id="storjcoin-x-total-carlos" class="Cbtcvalue">
+						    <td id="storj-total-carlos" class="Cbtcvalue">
 						    </td>
-						    <td id="storjcoin-x-real-carlos">
+						    <td id="storj-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
