--- a/mine.html
+++ b/mine.html
@@ -602,13 +602,13 @@
 					  </tr>
 					  <tr>
 					    <td>
-					    	Storjcoin X (SJCX)
+					    	Storj (STORJ)
 					    </td>
-					    <td id="storjcoin-x-price">
+					    <td id="storj-price">
 					    </td>
-					    <td id="storjcoin-x-change-btc">
+					    <td id="storj-change-btc">
 					    </td>
-					    <td id="storjcoin-x-change-real">
+					    <td id="storj-change-real">
 					    </td>
 					  </tr>
 					  <tr>
