--- a/mine.html
+++ b/mine.html
@@ -113,6 +113,18 @@
 					    <td id="status-real-pedro">
 					    </td>
 					  </tr>
+						<tr>
+					    <td>
+					    	Bitcoin Cash (BCH)
+					    </td>
+					    <td id="bitcoin-cash-amount-pedro">
+					    	0.55799278
+					    </td>
+					    <td id="bitcoin-cash-total-pedro" class="Pbtcvalue">
+					    </td>
+					    <td id="bitcoin-cash-real-pedro">
+					    </td>
+					  </tr>
 					  <tr>
 					    <td>
 					    	<strong>TOTAL</strong>
@@ -364,6 +376,18 @@
 						    <td id="status-real-carlos">
 						    </td>
 						  </tr>
+							<tr>
+						    <td>
+						    	Bitcoin Cash (BCH)
+						    </td>
+						    <td id="bitcoin-cash-amount-carlos">
+						    	2.19097972
+						    </td>
+						    <td id="bitcoin-cash-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="bitcoin-cash-real-carlos">
+						    </td>
+						  </tr>
 						  <tr>
 						    <td>
 						    	<strong>TOTAL</strong>
@@ -435,6 +459,18 @@
 					    <td id="bitcoin-real-mariana">
 					    </td>
 					  </tr>
+						<tr>
+							<td>
+								Bitcoin Cash (BCH)
+							</td>
+							<td id="bitcoin-cash-amount-mariana">
+								0.50000000
+							</td>
+							<td id="bitcoin-cash-total-mariana" class="Mbtcvalue">
+							</td>
+							<td id="bitcoin-cash-real-mariana">
+							</td>
+						</tr>
 					  <tr>
 					    <td>
 					    	<strong>TOTAL</strong>
@@ -688,6 +724,17 @@
 					    <td id="numeraire-change-real">
 					    </td>
 					  </tr>
+						<tr>
+							<td>
+								Bitcoin Cash (BCH)
+							</td>
+							<td id="bitcoin-cash-price">
+							</td>
+							<td id="bitcoin-cash-change-btc">
+							</td>
+							<td id="bitcoin-cash-change-real">
+							</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
