--- a/renata.html
+++ b/renata.html
@@ -40,6 +40,18 @@
                 <td id="bitcoin-real-renata">
                 </td>
               </tr>
+							<tr>
+								<td>
+									Bitcoin Cash (BCH)
+								</td>
+								<td id="bitcoin-cash-amount-renata">
+									0.101265823
+								</td>
+								<td id="bitcoin-cash-total-renata" class="Rbtcvalue">
+								</td>
+								<td id="bitcoin-cash-real-renata">
+								</td>
+							</tr>
               <tr>
                 <td>
                   <strong>TOTAL</strong>
@@ -83,6 +95,17 @@
                 <td id="bitcoin-change-real">
                 </td>
               </tr>
+							<tr>
+								<td>
+									Bitcoin Cash (BCH)
+								</td>
+								<td id="bitcoin-cash-price">
+								</td>
+								<td id="bitcoin-cash-change-btc">
+								</td>
+								<td id="bitcoin-cash-change-real">
+								</td>
+							</tr>
             </tbody>
           </table>
         </div>
