--- a/mine.html
+++ b/mine.html
@@ -91,7 +91,7 @@
 					  </tr>
 					  <tr>
 					    <td>
-					    	IOTA (IOT)
+					    	IOTA (MIOTA)
 					    </td>
 					    <td id="iota-amount-pedro">
 					    	4786.77474
@@ -187,7 +187,7 @@
 						    	Bitcoin (BTC)
 						    </td>
 						    <td id="bitcoin-amount-carlos" class="Cbtcvalue">
-						    	2.19097972
+						    	1.95097972
 						    </td>
 						    <td id="bitcoin-total-carlos">
 						    </td>
@@ -330,7 +330,7 @@
 						  </tr>
 						  <tr>
 						    <td>
-						    	IOTA (IOT)
+						    	IOTA (MIOTA)
 						    </td>
 						    <td id="iota-amount-carlos">
 						    	4804.68200000
@@ -386,6 +386,18 @@
 						    <td id="bitcoin-cash-total-carlos" class="Cbtcvalue">
 						    </td>
 						    <td id="bitcoin-cash-real-carlos">
+						    </td>
+						  </tr>
+							<tr>
+						    <td>
+						    	OmiseGo (OMG)
+						    </td>
+						    <td id="omisego-amount-carlos">
+						    	197.153903
+						    </td>
+						    <td id="omisego-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="omisego-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
@@ -733,6 +745,17 @@
 							<td id="bitcoin-cash-change-btc">
 							</td>
 							<td id="bitcoin-cash-change-real">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								OmiseGo (OMG)
+							</td>
+							<td id="omisego-price">
+							</td>
+							<td id="omisego-change-btc">
+							</td>
+							<td id="omisego-change-real">
 							</td>
 						</tr>
 					</tbody>
