--- a/mine.html
+++ b/mine.html
@@ -34,7 +34,7 @@
 					    	Decred (DCR)
 					    </td>
 					    <td id="decred-amount-pedro">
-					    	1969.99566
+					    	1982.4684
 					    </td>
 					    <td id="decred-total-pedro" class="Pbtcvalue">
 					    </td>
@@ -232,7 +232,7 @@
 						    	Decred (DCR)
 						    </td>
 						    <td id="decred-amount-carlos">
-						    	287.688535
+						    	324.074514
 						    </td>
 						    <td id="decred-total-carlos" class="Cbtcvalue">
 						    </td>
@@ -256,7 +256,7 @@
 						    	Bitcoin (BTC)
 						    </td>
 						    <td id="bitcoin-amount-carlos" class="Cbtcvalue">
-						    	1.95097972
+						    	1.38199803
 						    </td>
 						    <td id="bitcoin-total-carlos">
 						    </td>
@@ -280,7 +280,7 @@
 						    	Ubiq (UBQ)
 						    </td>
 						    <td id="ubiq-amount-carlos">
-						    	1500.10664679
+						    	1100.10664679
 						    </td>
 						    <td id="ubiq-total-carlos" class="Cbtcvalue">
 						    </td>
@@ -329,7 +329,7 @@
 						    	Wings (WINGS)
 						    </td>
 						    <td id="wings-amount-carlos">
-						    	3614.45295181
+						    	2914.45295181
 						    </td>
 						    <td id="wings-total-carlos" class="Cbtcvalue">
 						    </td>
@@ -467,6 +467,30 @@
 						    <td id="omisego-total-carlos" class="Cbtcvalue">
 						    </td>
 						    <td id="omisego-real-carlos">
+						    </td>
+						  </tr>
+							<tr>
+						    <td>
+						    	Mothership (MSP)
+						    </td>
+						    <td id="mothership-amount-carlos">
+						    	8281.51154568
+						    </td>
+						    <td id="mothership-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="mothership-real-carlos">
+						    </td>
+						  </tr>
+							<tr>
+						    <td>
+						    	District0x (DNT)
+						    </td>
+						    <td id="district0x-amount-carlos">
+						    	3252.118
+						    </td>
+						    <td id="district0x-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="district0x-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
@@ -825,6 +849,28 @@
 							<td id="omisego-change-btc">
 							</td>
 							<td id="omisego-change-real">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								Mothership (MSP)
+							</td>
+							<td id="mothership-price">
+							</td>
+							<td id="mothership-change-btc">
+							</td>
+							<td id="mothership-change-real">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								District0x (DNT)
+							</td>
+							<td id="district0x-price">
+							</td>
+							<td id="district0x-change-btc">
+							</td>
+							<td id="district0x-change-real">
 							</td>
 						</tr>
 					</tbody>
