--- a/renata.html
+++ b/renata.html
@@ -33,13 +33,25 @@
                   Bitcoin (BTC)
                 </td>
                 <td id="bitcoin-amount-renata" class="Rbtcvalue">
-                  0.194095463
+                  0.159014963
                 </td>
                 <td id="bitcoin-total-renata">
                 </td>
                 <td id="bitcoin-real-renata">
                 </td>
               </tr>
+							<tr>
+								<td>
+									IOTA (MIOTA)
+								</td>
+								<td id="iota-amount-renata">
+									273.0
+								</td>
+								<td id="iota-total-renata" class="Rbtcvalue">
+								</td>
+								<td id="iota-real-renata">
+								</td>
+							</tr>
 							<tr>
 								<td>
 									Bitcoin Cash (BCH)
@@ -95,6 +107,17 @@
                 <td id="bitcoin-change-real">
                 </td>
               </tr>
+							<tr>
+								<td>
+									IOTA (MIOTA)
+								</td>
+								<td id="iota-price">
+								</td>
+								<td id="iota-change-btc">
+								</td>
+								<td id="iota-change-real">
+								</td>
+							</tr>
 							<tr>
 								<td>
 									Bitcoin Cash (BCH)
