--- a/ej.html
+++ b/ej.html
@@ -18,6 +18,7 @@
       <center>
         <h1>VOCE FOI SELECIONADO PARA SER <span style="color: #f72072">VIP</span> DA MELHOR FESTA DO ANO</h1><bR />
         <h1>ENVIE UM EMAIL COM O SEU NOME E O DE 2 ACOMPANHANTES PARA <span style="color: #1d7c55">pandrade@empresajunior.com.br</span></h1><br />
+        <h2>ENVIE JUNTO COM UM PRINT DESSA TELA PARA COMPROVAR QUE VOCE CHEGOU ATE AQUI</h2><br />
         <h3>APENAS O PRIMEIRO A MANDAR O EMAIL TEM DIREITO AO PREMIO</h3><br />
       </center>
       <br />
