--- a/ej.html
+++ b/ej.html
@@ -6,13 +6,14 @@
   </head>
   <body>
     <div style="width: 100%; height: 0%;" id="ifs">
-      <h2>QUAL A SENHA?</h2>
+      <center><h1 style="font-size:60px;">QUAL A SENHA?</h1>
       <input id="distance">
-      <input type="button" onclick="calc()" value="READY">
+      <input type="button" onclick="calc()" value="CONFIRMAR">
       <p id="msg"></p>
       <div style="display: none;" id="gifWR">
         <iframe src="https://giphy.com/embed/3oz8xLd9DJq2l2VFtu" width="480" height="287" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/election2016-donald-trump-election-2016-3oz8xLd9DJq2l2VFtu">via GIPHY</a></p>
       </div>
+      </center>
     </div>
     <div style="display: none;" id="els">
       <center>
