--- a/ej.html
+++ b/ej.html
@@ -19,10 +19,10 @@
     <div style="display: none;" id="els">
       <center>
         <h1>VOCE FOI SELECIONADO PARA SER <span style="color: #f72072">VIP</span> DA MELHOR FESTA DO ANO</h1><bR />
-        <h1>COPIE E COLE NO GRUPO DO WHATSAPP "ALL-EJ" A SEGUINTE MENSAGEM QUE ESTA EM VERDE</h1><br />
+        <h1>O PRÊMIO SERÁ DADO AO PRIMEIRO QUE COPIAR E COLAR NO GRUPO DO WHATSAPP "ALL-EJ" A SEGUINTE MENSAGEM QUE ESTÁ EM VERDE</h1><br />
         <span style="color: green;"><h2>AMANHÃ IRÁ COMEÇAR A ARRECADAÇÃO DO DINHEIRO PARA A MELHOR FESTA DOS TRAINEES DA HISTÓRIA. OS 10 PRIMEIROS QUE PAGAREM O VALOR DE R$40,00 TERÃO ACESSO À EXCLUSIVA *ÁREA VIP*. QUE COMECE A CORRIDA!</h2><br /></span>
-        <h2>AO FINAL DA MENSAGEM MARQUE 2 ACOMPANHANTES QUE TAMBEM TERÃO ACESSO À ÁREA VIP </h2><br />
-        <h3>APENAS O PRIMEIRO A MANDAR A MENSAGEM TEM DIREITO AO PREMIO</h3>
+        <h2>AO FINAL DA MENSAGEM MARQUE 2 ACOMPANHANTES QUE TAMBEM TERÃO ACESSO À ÁREA VIP COM VOCÊ</h2><br />
+        <h3>APENAS O PRIMEIRO A MANDAR A MENSAGEM TEM DIREITO AO PRÊMIO</h3>
       </center>
       <br />
       <center>
