--- a/resenha.html
+++ b/resenha.html
@@ -32,10 +32,10 @@
                 <td>
                   Decred (DCR)
                 </td>
-                <td id="decred-amount-resenha" class="Rbtcvalue">
+                <td id="decred-amount-resenha">
                   2.67243768
                 </td>
-                <td id="decred-total-resenha">
+                <td id="decred-total-resenha" class="Rbtcvalue">
                 </td>
                 <td id="decred-real-resenha">
                 </td>
