--- a/mine.html
+++ b/mine.html
@@ -34,7 +34,7 @@
 					    	Decred (DCR)
 					    </td>
 					    <td id="decred-amount-pedro">
-					    	1619.64098
+					    	1589.64098
 					    </td>
 					    <td id="decred-total-pedro" class="Pbtcvalue">
 					    </td>
@@ -46,7 +46,7 @@
 					    	Ethereum (ETH)
 					    </td>
 					    <td id="ethereum-amount-pedro">
-					    	113.373547
+					    	123.330908
 					    </td>
 					    <td id="ethereum-total-pedro" class="Pbtcvalue">
 					    </td>
@@ -58,7 +58,7 @@
 					    	Bitcoin (BTC)
 					    </td>
 					    <td id="bitcoin-amount-pedro" class="Pbtcvalue">
-					    	2.36873046
+					    	2.06873046
 					    </td>
 					    <td id="bitcoin-total-pedro">
 					    </td>
@@ -125,6 +125,18 @@
 					    <td id="bitcoin-cash-real-pedro">
 					    </td>
 					  </tr>
+						<tr>
+					    <td>
+					    	Bitcoin Gold (BTG)
+					    </td>
+					    <td id="bitcoin-gold-amount-pedro">
+					    	0.55799278
+					    </td>
+					    <td id="bitcoin-gold-total-pedro" class="Pbtcvalue">
+					    </td>
+					    <td id="bitcoin-gold-real-pedro">
+					    </td>
+					  </tr>
 					  <tr>
 					    <td>
 					    	<strong>TOTAL</strong>
@@ -140,75 +152,6 @@
 					</tbody>
 				</table>
 			</div>
-		</div>
-
-		<div style="background-color:#f2f5f3;margin:1vw;float:left;">
-  				<div id='Pname_profit' onclick="toggle('Ptable_profit');">Profit
-						<div id='Ptable_profit'>
-						<table>
-							<thead>
-							  <tr style="font-size:28px;">
-							    <th>NAME</th>
-							    <th>BUY PRICE(USD)</th>
-							    <th>BUY PRICE(BTC)</th>
-									<th>USD Gain</th>
-									<th>BTC Gain</th>
-							  </tr>
-							</thead>
-							<tbody>
-								<tr>
-							    <td>Decred</td>
-									<td id="decred-actual-pedro-usd">US$5.64</td>
-									<td id="decred-actual-pedro-btc">0.00345937BTC</td>
-									<td id="decred-profit-pedro-usd" class="Pusd"></td>
-									<td id="decred-profit-pedro-btc" class="Pbtc"></td>
-							  </tr>
-								<tr>
-							    <td>Ethereum</td>
-									<td id="ethereum-actual-pedro-usd">US$13.60</td>
-									<td id="ethereum-actual-pedro-btc">0.03007855BTC</td>
-									<td id="ethereum-profit-pedro-usd" class="Pusd"></td>
-									<td id="ethereum-profit-pedro-btc" class="Pbtc"></td>
-							  </tr>
-								<tr>
-							    <td>Bitcoin</td>
-									<td id="bitcoin-actual-pedro-usd">US$1340.21</td>
-									<td id="bitcoin-actual-pedro-btc">1.000000000BTC</td>
-									<td id="bitcoin-profit-pedro-usd" class="Pusd"></td>
-									<td>-</td>
-							  </tr>
-								<tr>
-							    <td>SHIFT</td>
-									<td id="shift-actual-pedro-usd">US$0.3569</td>
-									<td id="shift-actual-pedro-btc">0.00024653BTC</td>
-									<td id="shift-profit-pedro-usd" class="Pusd"></td>
-									<td id="shift-profit-pedro-btc" class="Pbtc"></td>
-							  </tr>
-								<tr>
-							    <td>Ubiq</td>
-									<td id="ubiq-actual-pedro-usd">US$0.278</td>
-									<td id="ubiq-actual-pedro-btc">0.00014009BTC</td>
-									<td id="ubiq-profit-pedro-usd" class="Pusd"></td>
-									<td id="ubiq-profit-pedro-btc" class="Pbtc"></td>
-							  </tr>
-								<tr>
-							    <td>IOTA</td>
-									<td id="iota-actual-pedro-usd">US$0.558</td>
-									<td id="iota-actual-pedro-btc">0.0001820733BTC</td>
-									<td id="iota-profit-pedro-usd" class="Pusd"></td>
-									<td id="iota-profit-pedro-btc" class="Pbtc"></td>
-							  </tr>
-								<tr>
-							    <td>Status</td>
-									<td id="status-actual-pedro-usd">US$0.0386</td>
-									<td id="status-actual-pedro-btc">0.00001169142</td>
-									<td id="status-profit-pedro-usd" class="Pusd"></td>
-									<td id="status-profit-pedro-btc" class="Pbtc"></td>
-							  </tr>
-							</tbody>
-						</table>
-					</div>
-				</div>
 		</div>
 
 		<div style="clear:left;background-color:#f2f5f3;float:left;margin:1vw;">
@@ -232,7 +175,7 @@
 						    	Decred (DCR)
 						    </td>
 						    <td id="decred-amount-carlos">
-						    	287.688535
+						    	267.688535
 						    </td>
 						    <td id="decred-total-carlos" class="Cbtcvalue">
 						    </td>
@@ -256,7 +199,7 @@
 						    	Bitcoin (BTC)
 						    </td>
 						    <td id="bitcoin-amount-carlos" class="Cbtcvalue">
-						    	1.7509053
+						    	2.12573675
 						    </td>
 						    <td id="bitcoin-total-carlos">
 						    </td>
@@ -362,18 +305,6 @@
 						  </tr>
 						  <tr>
 						    <td>
-						    	DigixDAO (DGD)
-						    </td>
-						    <td id="digixdao-amount-carlos">
-						    	15.553963
-						    </td>
-						    <td id="digixdao-total-carlos" class="Cbtcvalue">
-						    </td>
-						    <td id="digixdao-real-carlos">
-						    </td>
-						  </tr>
-						  <tr>
-						    <td>
 						    	Counterparty (XCP)
 						    </td>
 						    <td id="counterparty-amount-carlos">
@@ -384,19 +315,6 @@
 						    <td id="counterparty-real-carlos">
 						    </td>
 						  </tr>
-						  <tr>
-						    <td>
-						    	Chronobank (TIME)
-						    </td>
-						    <td id="chronobank-amount-carlos">
-						    	31.37962503
-						    </td>
-						    <td id="chronobank-total-carlos" class="Cbtcvalue">
-						    </td>
-						    <td id="chronobank-real-carlos">
-						    </td>
-						  </tr>
-						  <tr>
 						  <tr>
 						    <td>
 						    	Basic Attention Token (BAT)
@@ -423,18 +341,6 @@
 						  </tr>
 						  <tr>
 						    <td>
-						    	Numeraire (NMR)
-						    </td>
-						    <td id="numeraire-amount-carlos">
-						    	5.90936019
-						    </td>
-						    <td id="numeraire-total-carlos" class="Cbtcvalue">
-						    </td>
-						    <td id="numeraire-real-carlos">
-						    </td>
-						  </tr>
-						  <tr>
-						    <td>
 						    	Status (SNT)
 						    </td>
 						    <td id="status-amount-carlos">
@@ -455,6 +361,18 @@
 						    <td id="bitcoin-cash-total-carlos" class="Cbtcvalue">
 						    </td>
 						    <td id="bitcoin-cash-real-carlos">
+						    </td>
+						  </tr>
+							<tr>
+						    <td>
+						    	Bitcoin Gold (BTG)
+						    </td>
+						    <td id="bitcoin-gold-amount-carlos">
+						    	1.35547431
+						    </td>
+						    <td id="bitcoin-gold-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="bitcoin-gold-real-carlos">
 						    </td>
 						  </tr>
 							<tr>
@@ -574,6 +492,18 @@
 							<td id="bitcoin-cash-total-mariana" class="Mbtcvalue">
 							</td>
 							<td id="bitcoin-cash-real-mariana">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								Bitcoin Gold (BTG)
+							</td>
+							<td id="bitcoin-gold-amount-mariana">
+								0.50000000
+							</td>
+							<td id="bitcoin-gold-total-mariana" class="Mbtcvalue">
+							</td>
+							<td id="bitcoin-gold-real-mariana">
 							</td>
 						</tr>
 					  <tr>
@@ -708,18 +638,7 @@
 					    <td id="ubiq-change-real">
 					    </td>
 					  </tr>
-					  <tr>
-					    <td>
-					    	DigixDAO (DGD)
-					    </td>
-					    <td id="digixdao-price">
-					    </td>
-					    <td id="digixdao-change-btc">
-					    </td>
-					    <td id="digixdao-change-real">
-					    </td>
-					  </tr>
-					  <tr>
+						<tr>
 					    <td>
 					    	Zcash (ZEC)
 					    </td>
@@ -741,18 +660,7 @@
 					    <td id="counterparty-change-real">
 					    </td>
 					  </tr>
-					  <tr>
-					    <td>
-					    	Chronobank (TIME)
-					    </td>
-					    <td id="chronobank-price">
-					    </td>
-					    <td id="chronobank-change-btc">
-					    </td>
-					    <td id="chronobank-change-real">
-					    </td>
-					  </tr>
-					  <tr>
+						<tr>
 					    <td>
 					    	Storj (STORJ)
 					    </td>
@@ -818,17 +726,6 @@
 					    <td id="bancor-change-real">
 					    </td>
 					  </tr>
-					  <tr>
-					    <td>
-					    	Numeraire (NMR)
-					    </td>
-					    <td id="numeraire-price">
-					    </td>
-					    <td id="numeraire-change-btc">
-					    </td>
-					    <td id="numeraire-change-real">
-					    </td>
-					  </tr>
 						<tr>
 							<td>
 								Bitcoin Cash (BCH)
@@ -838,6 +735,17 @@
 							<td id="bitcoin-cash-change-btc">
 							</td>
 							<td id="bitcoin-cash-change-real">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								Bitcoin Gold (BTG)
+							</td>
+							<td id="bitcoin-gold-price">
+							</td>
+							<td id="bitcoin-gold-change-btc">
+							</td>
+							<td id="bitcoin-gold-change-real">
 							</td>
 						</tr>
 						<tr>
