--- a/renata.html
+++ b/renata.html
@@ -64,6 +64,18 @@
 								<td id="bitcoin-cash-real-renata">
 								</td>
 							</tr>
+							<tr>
+								<td>
+									Bitcoin Gold (BTG)
+								</td>
+								<td id="bitcoin-gold-amount-renata">
+									0.101265823
+								</td>
+								<td id="bitcoin-gold-total-renata" class="Rbtcvalue">
+								</td>
+								<td id="bitcoin-gold-real-renata">
+								</td>
+							</tr>
               <tr>
                 <td>
                   <strong>TOTAL</strong>
@@ -127,6 +139,17 @@
 								<td id="bitcoin-cash-change-btc">
 								</td>
 								<td id="bitcoin-cash-change-real">
+								</td>
+							</tr>
+							<tr>
+								<td>
+									Bitcoin Gold (BTG)
+								</td>
+								<td id="bitcoin-gold-price">
+								</td>
+								<td id="bitcoin-gold-change-btc">
+								</td>
+								<td id="bitcoin-gold-change-real">
 								</td>
 							</tr>
             </tbody>
