--- a/mine.html
+++ b/mine.html
@@ -411,6 +411,18 @@
 						    <td id="district0x-real-carlos">
 						    </td>
 						  </tr>
+							<tr>
+						    <td>
+						    	DOGE (DOGE)
+						    </td>
+						    <td id="dogecoin-amount-carlos">
+						    	1217262.16762500
+						    </td>
+						    <td id="dogecoin-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="dogecoin-real-carlos">
+						    </td>
+						  </tr>
 						  <tr>
 						    <td>
 						    	<strong>TOTAL</strong>
@@ -779,6 +791,17 @@
 							<td id="district0x-change-btc">
 							</td>
 							<td id="district0x-change-real">
+							</td>
+						</tr>
+						<tr>
+							<td>
+								DOGE (DOGE)
+							</td>
+							<td id="dogecoin-price">
+							</td>
+							<td id="dogecoin-change-btc">
+							</td>
+							<td id="dogecoin-change-real">
 							</td>
 						</tr>
 					</tbody>
