--- a/mine.html
+++ b/mine.html
@@ -199,7 +199,7 @@
 						    	Bitcoin (BTC)
 						    </td>
 						    <td id="bitcoin-amount-carlos" class="Cbtcvalue">
-						    	5.41979553
+						    	5.16979553
 						    </td>
 						    <td id="bitcoin-total-carlos">
 						    </td>
@@ -355,7 +355,7 @@
 						    	OmiseGo (OMG)
 						    </td>
 						    <td id="omisego-amount-carlos">
-						    	197.153903
+						    	382.873508
 						    </td>
 						    <td id="omisego-total-carlos" class="Cbtcvalue">
 						    </td>
@@ -386,6 +386,18 @@
 						    <td id="district0x-real-carlos">
 						    </td>
 						  </tr>
+							<tr>
+								<td>
+									0x (ZRX)
+								</td>
+								<td id="0x-amount-carlos">
+									1057.30598435
+								</td>
+								<td id="0x-total-carlos" class="Cbtcvalue">
+								</td>
+								<td id="0x-real-carlos">
+								</td>
+							</tr>
 							<tr>
 						    <td>
 						    	DOGE (DOGE)
