--- a/mine.html
+++ b/mine.html
@@ -199,7 +199,7 @@
 						    	Bitcoin (BTC)
 						    </td>
 						    <td id="bitcoin-amount-carlos" class="Cbtcvalue">
-						    	5.16979553
+						    	5.27345127
 						    </td>
 						    <td id="bitcoin-total-carlos">
 						    </td>
@@ -276,18 +276,6 @@
 						    <td id="storj-total-carlos" class="Cbtcvalue">
 						    </td>
 						    <td id="storj-real-carlos">
-						    </td>
-						  </tr>
-						  <tr>
-						    <td>
-						    	Counterparty (XCP)
-						    </td>
-						    <td id="counterparty-amount-carlos">
-						    	49.17001917
-						    </td>
-						    <td id="counterparty-total-carlos" class="Cbtcvalue">
-						    </td>
-						    <td id="counterparty-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
@@ -403,11 +391,47 @@
 						    	DOGE (DOGE)
 						    </td>
 						    <td id="dogecoin-amount-carlos">
-						    	1217262.16762500
+						    	684743.393
 						    </td>
 						    <td id="dogecoin-total-carlos" class="Cbtcvalue">
 						    </td>
 						    <td id="dogecoin-real-carlos">
+						    </td>
+						  </tr>
+							<tr>
+						    <td>
+						    	Opus (OPT)
+						    </td>
+						    <td id="opus-amount-carlos">
+						    	33391.06200000
+						    </td>
+						    <td id="opus-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="opus-real-carlos">
+						    </td>
+						  </tr>
+							<tr>
+						    <td>
+						    	Ellaism (ELLA)
+						    </td>
+						    <td id="ellaism-amount-carlos">
+						    	1864.69459084
+						    </td>
+						    <td id="ellaism-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="ellaism-real-carlos">
+						    </td>
+						  </tr>
+							<tr>
+						    <td>
+						    	MyWish (WISH)
+						    </td>
+						    <td id="mywish-amount-carlos">
+						    	3003.86974398
+						    </td>
+						    <td id="mywish-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="mywish-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
@@ -637,17 +661,6 @@
 					    <td id="zcash-change-real">
 					    </td>
 					  </tr>
-					  <tr>
-					    <td>
-					    	Counterparty (XCP)
-					    </td>
-					    <td id="counterparty-price">
-					    </td>
-					    <td id="counterparty-change-btc">
-					    </td>
-					    <td id="counterparty-change-real">
-					    </td>
-					  </tr>
 						<tr>
 					    <td>
 					    	Storj (STORJ)
@@ -780,6 +793,50 @@
 							<td id="dogecoin-change-real">
 							</td>
 						</tr>
+					  <tr>
+					    <td>
+					    	0x (ZRX)
+					    </td>
+					    <td id="0x-price">
+					    </td>
+					    <td id="0x-change-btc">
+					    </td>
+					    <td id="0x-change-real">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Opus (OPT)
+					    </td>
+					    <td id="opus-price">
+					    </td>
+					    <td id="opus-change-btc">
+					    </td>
+					    <td id="opus-change-real">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Ellaism (ELLA)
+					    </td>
+					    <td id="ellaism-price">
+					    </td>
+					    <td id="ellaism-change-btc">
+					    </td>
+					    <td id="ellaism-change-real">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	MyWish (WISH)
+					    </td>
+					    <td id="mywish-price">
+					    </td>
+					    <td id="mywish-change-btc">
+					    </td>
+					    <td id="mywish-change-real">
+					    </td>
+					  </tr>
 					</tbody>
 				</table>
 			</div>
