--- a/resenha.html
+++ b/resenha.html
@@ -42,14 +42,14 @@
               </tr>
 							<tr>
 								<td>
-									DOGE (DOGE)
+									Bitcoin (BTC)
 								</td>
-								<td id="dogecoin-amount-resenha">
-									115256.60691176
+								<td id="bitcoin-amount-resenha" class="Rbtcvalue">
+									0.10807036
 								</td>
-								<td id="dogecoin-total-resenha" class="Rbtcvalue">
+								<td id="bitcoin-total-resenha">
 								</td>
-								<td id="dogecoin-real-resenha">
+								<td id="bitcoin-real-resenha">
 								</td>
 							</tr>
               <tr>
