--- a/mine.html
+++ b/mine.html
@@ -486,13 +486,25 @@
 					    	Bitcoin (BTC)
 					    </td>
 					    <td id="bitcoin-amount-mariana" class="Mbtcvalue">
-					    	0.50000000
+					    	0.634059287
 					    </td>
 					    <td id="bitcoin-total-mariana">
 					    </td>
 					    <td id="bitcoin-real-mariana">
 					    </td>
 					  </tr>
+						<tr>
+							<td>
+								IOTA (MIOTA)
+							</td>
+							<td id="iota-amount-mariana">
+								1039.82269
+							</td>
+							<td id="iota-total-mariana" class="Mbtcvalue">
+							</td>
+							<td id="iota-real-mariana">
+							</td>
+						</tr>
 						<tr>
 							<td>
 								Bitcoin Cash (BCH)
